--- a/ChurrasDH/Views/MessageCell.xib
+++ b/ChurrasDH/Views/MessageCell.xib
@@ -19,11 +19,18 @@
                     <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="2K8-AJ-Z3B">
                         <rect key="frame" x="10" y="10" width="512" height="255"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fogo" translatesAutoresizingMaskIntoConstraints="NO" id="Ir7-c6-JkD">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="52z-sA-ow7"/>
+                                    <constraint firstAttribute="width" constant="50" id="9p6-Ys-GZZ"/>
+                                </constraints>
+                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fhN-yd-7T8">
-                                <rect key="frame" x="0.0" y="0.0" width="442" height="255"/>
+                                <rect key="frame" x="70" y="0.0" width="372" height="255"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tdl-OX-u9Z">
-                                        <rect key="frame" x="10" y="10" width="422" height="235"/>
+                                        <rect key="frame" x="10" y="10" width="352" height="235"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -37,7 +44,7 @@
                                     <constraint firstItem="Tdl-OX-u9Z" firstAttribute="top" secondItem="fhN-yd-7T8" secondAttribute="top" constant="10" id="weF-qb-XuQ"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fogo" translatesAutoresizingMaskIntoConstraints="NO" id="rcg-cl-Ffi">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fogo" translatesAutoresizingMaskIntoConstraints="NO" id="rcg-cl-Ffi">
                                 <rect key="frame" x="462" y="0.0" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="3tt-gM-AGl"/>
@@ -55,6 +62,7 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="friendUserImageView" destination="Ir7-c6-JkD" id="oFj-dl-Txr"/>
                 <outlet property="messageBubble" destination="fhN-yd-7T8" id="ORo-4s-OOf"/>
                 <outlet property="messageLabel" destination="Tdl-OX-u9Z" id="e3a-gE-NUJ"/>
                 <outlet property="userImageView" destination="rcg-cl-Ffi" id="Vgm-FJ-vEr"/>
